force-app/main/default/objects/ConfirmationCheckMaster__c/ConfirmationCheckMaster__c.object-meta.xml
<CustomObject>
    <label>新規確認書チェックマスタ</label>
    <nameField>
        <displayFormat>CM-{000000000}</displayFormat>
        <label>ご確認書チェックマスタNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>