force-app/main/default/objects/ConfirmationCheckMaster__c/fields/QuestionChoice1__c.field-meta.xml
<CustomField>
    <fullName>QuestionChoice1__c</fullName>
    <label>質問選択肢1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>