force-app/main/default/objects/ConfirmationCheckMaster__c/fields/QuestionChoice2Category__c.field-meta.xml
<CustomField>
    <fullName>QuestionChoice2Category__c</fullName>
    <label>質問選択肢2区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ConfirmationCheckQuestion</valueSetName>
    </valueSet>
</CustomField>