force-app/main/default/objects/ConfirmationCheckMaster__c/fields/QuestionChoice3__c.field-meta.xml
<CustomField>
    <fullName>QuestionChoice3__c</fullName>
    <label>質問選択肢3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>