force-app/main/default/objects/ConfirmationCheckMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CorporateHousingRegulation__c</columns>
    <columns>QuestionNum__c</columns>
    <columns>QuestionTitle__c</columns>
    <columns>QuestionContent__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>